# theme

./: .gitignore  BRANDING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/keycloak/sigma/login/: theme.properties
assets/keycloak/sigma/login/messages/: messages_en.properties
assets/keycloak/sigma/login/resources/css/: register-link.css  sigma-keycloak.css
assets/keycloak/sigma/login/resources/js/: register-link.js
assets/static/css/: sigma-dial.css  site.css
assets/templates/: base.html  index.html
assets/templates/error/: 403.html  404.html  405.html  500.html
assets/templates/widgets/: human_check.html  site_nav.html
scripts/: sync-keycloak-theme.sh
src/: assets.rs  axum.rs  cache.rs  content.rs  copyright.rs  errors.rs  lib.rs  nav.rs  security.rs  site_nav.rs  templates.rs  warp.rs
src/assets/: static_assets.rs
src/axum/: themed_panic_response.rs
src/cache/: ttl_cache.rs
src/content/: content_error.rs  github_content_entry.rs  markdown_file.rs
src/nav/: breadcrumb.rs  menu_item.rs  nav_entry.rs  site_header.rs  site_menu.rs  site_menu_section.rs
src/security/: csp_options.rs
src/site_nav/: app_site_nav.rs  site_chrome.rs  site_nav_template.rs
src/templates/: forbidden_template.rs  index_template.rs  internal_error_template.rs  method_not_allowed_template.rs  not_found_template.rs
src/warp/: template_error.rs
ts/: package-lock.json  package.json
ts/src/: address-select.ts  contact-form-auth.ts  eye-glow.ts  index.ts  password-toggle.ts  payment-method-form.ts  product-order.ts  register-link.ts  register-success.ts  sigma-dial.ts  store-auth.ts  store-nav-auth.ts
