[package]
name = "sigma-theme"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
description = "Shared Sigma Tactical Group site chrome: assets, templates, and HTTP helpers"
publish = false

[features]
default = ["askama", "axum", "warp"]
askama = ["dep:askama"]
axum = ["dep:axum", "dep:bytes", "dep:tower-http", "embed"]
warp = ["dep:warp", "embed"]
embed = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
askama = { version = "0.16.0", optional = true }
axum = { version = "0.8.1", optional = true }
bytes = { version = "1.11", optional = true }
mime_guess = { version = "2.0", optional = true }
rust-embed = { version = "8.7", optional = true }
tower-http = { version = "0.7.0", optional = true, features = ["set-header", "catch-panic"] }
tracing = "0.1"
warp = { version = "0.4.3", optional = true }

[package.metadata.askama]
dirs = ["assets/templates"]

[dev-dependencies]
http-body-util = "0.1.2"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
