[package]

name = "sigma-theme"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
homepage = "https://sigmatactical.org"
description = "Shared Sigma Tactical Group site chrome: assets, templates, and HTTP helpers"
publish = false

[features]
default = ["askama"]
askama = ["dep:askama", "site-nav"]
site-nav = [
    "dep:sigma-cart-nav",
    "dep:sigma-contact-nav",
    "dep:sigma-identity-nav",
]
axum = ["dep:axum", "dep:tower-http", "askama", "embed"]
warp = [
    "dep:warp",
    "warp/server",
    "dep:tokio",
    "tokio/macros",
    "tokio/net",
    "tokio/signal",
    "askama",
    "embed",
]
cache = ["dep:tokio", "tokio/sync"]
content = [
    "dep:futures-util",
    "dep:pulldown-cmark",
    "dep:reqwest",
    "dep:serde",
    "dep:thiserror",
]
embed = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
askama = { version = "0.16.0", optional = true }
sigma-cart-nav = { git = "https://github.com/sigmatactical-org/cart.git", optional = true }
sigma-contact-nav = { git = "https://github.com/sigmatactical-org/contact.git", optional = true }
sigma-identity-nav = { git = "https://github.com/sigmatactical-org/identity.git", package = "sigma-identity-nav", optional = true }
axum = { version = "0.8.9", optional = true }
futures-util = { version = "0.3.31", optional = true, default-features = false, features = ["std"] }
mime_guess = { version = "2.0.5", optional = true }
pulldown-cmark = { version = "0.13.4", optional = true, default-features = false, features = ["html"] }
reqwest = { version = "0.13.4", optional = true, default-features = false, features = ["json", "rustls"] }
rust-embed = { version = "8.12.0", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
thiserror = { version = "2.0.18", optional = true }
tokio = { version = "1.52.3", optional = true, default-features = false }
tower-http = { version = "0.7.0", optional = true, features = ["set-header", "catch-panic"] }
tracing = "0.1.44"
warp = { version = "0.4.3", optional = true }

[package.metadata.askama]
dirs = ["assets/templates"]

[dev-dependencies]
http-body-util = "0.1.4"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync"] }
tower = { version = "0.5.3", features = ["util"] }
warp = { version = "0.4.3", features = ["server", "test"] }
